feat(haberes): implementa manejo de estados docentes y optimización de código (#51)
- Agrega campo estadoDocente en modelos CargoLiquidacion, Categoria y CategoriaPeriodo

- Optimiza código reemplazando @Autowired por inyección por constructor

- Mejora manejo de nulos con Objects.requireNonNull

- Implementa logging estructurado con Jackson

- Actualiza generación de reportes con nuevo campo estado_docente

- Mejora manejo de excepciones y mensajes de error

- Actualiza documentación en README y CHANGELOG

- Actualiza dependencias en pom.xml

Closes #51